--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^5.9.1",
     "axios": "^0.20.0",
     "formik": "^2.1.5",
+    "luxon": "^1.25.0",
     "native-base": "^2.13.14",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
@@ -32,6 +33,7 @@
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
     "react-native-smooth-pincode-input": "^1.0.9",
+    "react-native-smtp-mailer": "^1.2.3",
     "react-native-vector-icons": "^7.1.0",
     "react-redux": "^7.2.1",
     "recompose": "^0.30.0",
